@@ -14,6 +14,8 @@
 
   * Mark as compatible with bzr 1.13.
 
+  * Fix opening Status window in Olive (#316310)
+
 0.95.0	2008-08-04
 
  UI
